--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="offwhite">#f2f2f2</color>
     <color name="white">#ffffff</color>
     <color name="colorNoSelection">#000000</color>
+    <color name="black">#000</color>
 
 </resources>
