--- a/app/src/main/res/layout/activity_pop_interests_grid_expand.xml
+++ b/app/src/main/res/layout/activity_pop_interests_grid_expand.xml
@@ -1,65 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PopInterestsGridActivity"
-    android:background="@drawable/bg">
-
-    <TextView
-        android:id="@+id/tv_grid_actv_exp_diary_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginBottom="32dp"
-        android:text="Diary"
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_grid_actv_exp_followers_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="Followers"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_grid_actv_exp_similar_id"
-        app:layout_constraintStart_toEndOf="@+id/tv_grid_actv_exp_diary_id" />
-
-    <TextView
-        android:id="@+id/tv_grid_actv_exp_similar_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="32dp"
-        android:text="Similar"
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    tools:context=".view.activity.PopInterestsGridActivity"
+    android:background="@drawable/bg_blur1">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view_expand_id"
-        android:layout_width="183dp"
-        android:layout_height="196dp"
+        android:id="@+id/main_popInt_grid_cv_twitter_id"
+        android:layout_width="359dp"
+        android:layout_height="507dp"
+        android:layout_rowWeight="1"
+        android:layout_columnWeight="1"
+        android:backgroundTint="@color/cardview_shadow_end_color"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_grid_actv_exp_followers_id"
+        app.cardInnerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_margin="16dp"
+            android:orientation="vertical" />
+
+        <ImageView
+            android:id="@+id/main_popInt_grid_image_twitter_id"
+            android:layout_width="178dp"
+            android:layout_height="190dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="80dp"
+            android:src="@drawable/twitter" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|left"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/offwhite"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/main_popInt_grid_tv_title_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Title"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                android:textStyle="bold">
+            </TextView>
+
+            <TextView
+                android:id="@+id/main_popInt_grid_tv_description_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="32dp"
+                android:text="@string/loren"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="15dp">
+            </TextView>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
