--- a/app/src/main/res/layout/activity_pop_interests_grid_expand.xml
+++ b/app/src/main/res/layout/activity_pop_interests_grid_expand.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/bg_blur1">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/main_popInt_grid_cv_twitter_id"
+        android:id="@+id/actvt_popInt_grid_cv_twitter_id"
         android:layout_width="359dp"
         android:layout_height="507dp"
         android:layout_rowWeight="1"
@@ -30,13 +30,25 @@
             android:layout_margin="16dp"
             android:orientation="vertical" />
 
+        <TextView
+            android:id="@+id/actvt_popInt_grid_exp_tv_follow_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Follow"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="right"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp" />
+
         <ImageView
-            android:id="@+id/main_popInt_grid_image_twitter_id"
+            android:id="@+id/actvt_popInt_grid_image_twitter_id"
             android:layout_width="178dp"
             android:layout_height="190dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="80dp"
-            android:src="@drawable/twitter" />
+            android:src="@drawable/alexa" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,7 +60,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/main_popInt_grid_tv_title_id"
+                android:id="@+id/actvt_popInt_grid_tv_title_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -60,7 +72,7 @@
             </TextView>
 
             <TextView
-                android:id="@+id/main_popInt_grid_tv_description_id"
+                android:id="@+id/actvt_popInt_grid_tv_description_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -73,7 +85,47 @@
                 android:textSize="15dp">
             </TextView>
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="Dairy"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/actvt_popInt_grid_cv_twitter_id" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="w"
+        android:layout_marginTop="32dp"
+        android:text="Followers"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/actvt_popInt_grid_cv_twitter_id" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:text="Similiar"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/actvt_popInt_grid_cv_twitter_id" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
