--- a/app/src/main/res/layout/activity_pop_interests_grid_expand.xml
+++ b/app/src/main/res/layout/activity_pop_interests_grid_expand.xml
@@ -89,7 +89,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/actvt_popInt_grid_exp_tv_dairy_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -98,13 +98,13 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/textView11"
+        app:layout_constraintEnd_toStartOf="@+id/actvt_popInt_grid_exp_tv_followers_id"
         app:layout_constraintTop_toBottomOf="@+id/actvt_popInt_grid_cv_twitter_id" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/actvt_popInt_grid_exp_tv_followers_id"
         android:layout_width="wrap_content"
-        android:layout_height="w"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Followers"
         android:textColor="@color/white"
@@ -115,7 +115,7 @@
         app:layout_constraintTop_toBottomOf="@+id/actvt_popInt_grid_cv_twitter_id" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/actvt_popInt_grid_exp_tv_similar_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -124,7 +124,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toEndOf="@+id/actvt_popInt_grid_exp_tv_followers_id"
         app:layout_constraintTop_toBottomOf="@+id/actvt_popInt_grid_cv_twitter_id" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
