fixing some id names

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -131,13 +131,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_alexa_id"
+                                android:id="@+id/main_popInt_grid_img_alexa_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/alexa" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_alexa_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -169,13 +170,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_android_id"
+                                android:id="@+id/main_popInt_grid_img_android_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/android" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_android_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -208,13 +210,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_whatsapp_id"
+                                android:id="@+id/main_popInt_grid_img_whats_id"
                                 android:layout_width="match_parent"
                                 android:layout_height="81dp"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/whats" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_whats_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -246,13 +249,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_facebook_id"
+                                android:id="@+id/main_popInt_grid_img_facebook_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/fb" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_facebook_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -284,13 +288,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_starbucks_id"
+                                android:id="@+id/main_popInt_grid_img_starbucks_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/starbucks" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_starbucks_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -322,13 +327,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_google_id"
+                                android:id="@+id/main_popInt_grid_img_google_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/google" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_google_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -360,13 +366,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_instagran_id"
+                                android:id="@+id/main_popInt_grid_img_instagran_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/insta" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_instagran_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -398,13 +405,14 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_skype_id"
+                                android:id="@+id/main_popInt_grid_img_skype_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/skype" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_skype_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|left"
@@ -436,16 +444,17 @@
                                 android:orientation="vertical" />
 
                             <ImageView
-                                android:id="@+id/main_popInt_grid_twitter_id"
+                                android:id="@+id/main_popInt_grid_img_twitter_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:src="@drawable/twitter" />
 
                             <TextView
+                                android:id="@+id/main_popInt_grid_tv_twitter_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="bottom|left"
+                                android:layout_gravity="left|bottom"
                                 android:text="Twitter"
                                 android:layout_marginStart="4dp"
                                 android:layout_marginBottom="2dp"
